client/src/components/LotForm/style.css
.grid-container {
  border-radius: 25px;
  margin-left: 0.5em;
  margin-right: 0.5em;
  margin-bottom: 1em;
  padding: 1em;
  display: grid;
  grid-template-columns: 9em auto;
}
.flex-container {
  margin-left: 1em;
  margin-right: 1em;
  display: flex;
  justify-content: center;
}

input {
  border-radius: 5px;
  margin: 0.25em;
}

button {
  margin: 1em;
}

.statusMsg {
  text-align: center;
  font-size: 2em;
}

